<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="6dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        android:layout_margin="16dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="2dp"
                android:textSize="32sp"
                android:text="@string/banner"
                android:textAlignment="center" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnByThree"
            android:text="@string/buttons3"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="32sp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/btnByFive"
            android:text="@string/buttons5"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless" />


    </LinearLayout>

</RelativeLayout>