<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="6dp"
        card_view:cardBackgroundColor="@color/cardViewBackground"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="#311b92"
                    android:textStyle="bold"
                    android:text="@string/player1"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/displayOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColorHint="#311b92"
                    android:layout_marginTop="16dp"
                    android:textSize="24sp"
                    android:hint="@string/hint"
                    android:textAlignment="center" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A90E2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="#311b92"
                    android:textStyle="bold"
                    android:text="@string/player2"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/displayTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textColorHint="#311b92"
                    android:textSize="24sp"
                    android:hint="@string/hint"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/resetButton"
        android:layout_below="@id/cardView"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:weightSum="3">

            <android.support.v7.widget.CardView
                android:id="@+id/card_1"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardViewBackground"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_00"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@color/buttons"
                        android:textSize="56sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_2"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardViewBackground"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@color/buttons"
                        android:textStyle="bold"
                        android:textSize="56sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_3"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardViewBackground"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@color/buttons"
                        android:textStyle="bold"
                        android:textSize="56sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:weightSum="3">

            <android.support.v7.widget.CardView
                android:id="@+id/card_4"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardViewBackground"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@color/buttons"
                        android:textStyle="bold"
                        android:textSize="56sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_5"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardViewBackground"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_11"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@color/buttons"
                        android:textStyle="bold"
                        android:textSize="56sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_6"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardViewBackground"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@color/buttons"
                        android:textSize="56sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <android.support.v7.widget.CardView
                android:id="@+id/card_7"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardViewBackground"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_20"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@color/buttons"
                        android:textSize="56sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_8"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardViewBackground"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_21"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@color/buttons"
                        android:textSize="56sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_9"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardViewBackground"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_22"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@color/buttons"
                        android:textStyle="bold"
                        android:textSize="56sp"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:background="#1D174F"
        android:textSize="20sp"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="#fff" />

</RelativeLayout>
